[tool.poetry]
name = "video-downloader-proxy"
version = "0.1.0"
description = ""
authors = ["Jag_k <jag.konon@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
aiohttp = "^3.8.4"
aiofiles = "^23.1.0"
tortoise-orm = {extras = ["asyncpg"], version = "^0.19.3"}
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
